components/layout.module.css
/*SCROLLBAR STYLING*/
.contentMask::-webkit-scrollbar {
    display: block;
}

.contentMask::-webkit-scrollbar-track {
    background: transparent;
}

.contentMask::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 10px;

    background-clip: content-box;
    border: 3px solid transparent
}

.contentMask::-webkit-scrollbar-track-piece:end {
    background: transparent;
    margin-bottom: 60px;
}

.contentMask::-webkit-scrollbar-track-piece:start {
    background: transparent;
    margin-top: 70px;
}

/*CONTAINERS AND MAIN COMPONENTS*/

.backgroundContainer {
    position: fixed;
    height: 100%;
    width: 100%;
}

.scrollContainer {
    position: fixed;
    height: 100%;
    width: 100%;

    pointer-events: none;
}

.contentMask {
    position: fixed;
    width: 100%;
    height: 100%;

    overflow-y: scroll;

    mask-image: 
        linear-gradient(transparent, transparent 80px, black 100px, black 90%, transparent 92%, transparent),
        linear-gradient(to left, black 17px, transparent 18px);
}

.contentContainer {
    position: static;

    pointer-events: all;

    margin: 70px 10vw 70px calc(10vw + 17px);

    padding: 20px 40px 20px 40px;

    min-height: 79.8vh;

    background: linear-gradient(.25turn, transparent, transparent 1%, rgba(0, 0, 0, 0.7) 2%, rgba(0, 0, 0, 0.7) 98%, transparent 99%, transparent);

    overflow: hidden;
}

.contentOverflowContainer {
    height: 100%;
    width: 100%;

    overflow: hidden;
}

.controlsContainer {
    display: flex;
    justify-content: space-around;
    width: 100%;
    margin: 20px 0 20px 0;
}

.controlButtons {
    height: 40px;
    width: 40px;
    border: 2px solid white;
}

.controlButtons:hover {
    cursor: pointer;
}

.buttonImage {
    height: 100%;
    width: 100%;
}

/*BACKGROUND STYLING*/
.sky {
    position: fixed;
    height: 50%;
    width: 100%;

    z-index: 0;

    overflow: hidden;
    
    background: rgb(192, 255, 255);

    display: flex;
    flex-direction: column;

    justify-content: flex-end;

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateSky;
}

@keyframes animateSky {
    0% {
        background: rgb(192, 250, 250);
    }

    25% {
        background: rgb(32, 31, 133);
    }

    50% {
        background: rgb(12, 2, 48);
    }

    75% {
        background: rgb(57, 55, 160);
    }

    100% {
        background: rgb(192, 250, 250);
    }
}

.skyFilter {
    position: fixed;
    height: 100%;
    width: 100%;

    background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateSkyFilter;
}

@keyframes animateSkyFilter {
    0% {
        opacity: 0;
        
    }

    15% {
        opacity: 0;
        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
    }

    25% {
        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
        opacity: 1;
    }

    50% {
        opacity: 0.6;
        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
    }

    65% {
        opacity: 0;
        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
    }

    66%, 85% {
        opacity: 0;
        background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);
    }

    75% {
        opacity: 1;
        background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);
    }

    100% {
        opacity: 0;
    }
}

.lake {
    position: fixed;
    height: 50%;
    width: 100%;
    top: 50%;

    z-index: 3;

    overflow: hidden;
    background: rgba(14, 167, 214, 0.5);

    backdrop-filter: blur(4px);

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateLake;
}

@keyframes animateLake {
    0% {
        background: rgba(14, 167, 214, 0.5);
    }

    25% {
        background: rgba(1, 20, 80, 0.5);
    }

    50% {
        background: rgba(14, 3, 31, 0.8);
    }

    75% {
        background: rgba(1, 20, 80, 0.5)
    }

    100% {
        background: rgba(14, 167, 214, 0.5);
    }
}

.lakeFilter {
    position: fixed;
    height: 50%;
    width: 100%;

    overflow: hidden;

    background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateLakeFilter;
}

@keyframes animateLakeFilter {
    0% {
        background: linear-gradient(white, transparent 15%);
        opacity: .6;
    }

    14% {
        background: linear-gradient(white, transparent 15%);
        opacity: .2;
    }

    65% {
        background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
        opacity: 0;
    }

    75% {
        background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
        opacity: 1;
    }

    85% {
        background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
        opacity: 0;
    }

    86% {
        background: linear-gradient(white, transparent 15%);
        opacity: 0;
    }

    100% {
        background: linear-gradient(white, transparent 15%);
        opacity: .5;
    }
}

.lakeMoonReflection {
    position: relative;
    height: 250px;
    width: 250px;

    top: -125px;

    left: 50%;
    transform: translate(-50%, 0vh);

    background: radial-gradient(white, transparent 60%);

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateLakeMoonReflection;
}

@keyframes animateLakeMoonReflection {
    0% {
        transform: translate(-50%, -150vh);
    }

    25% {
        transform: translate(-50%, 0vh);
        height: 250px;
    }

    50% {
        height: 1000px;
        transform: translate(-50%, 150vh);
        opacity: 0;
    }

    75%, 100% {
        transform: translate(-50%, 300vh);
    }
}

.sunMoonContainer {
    position: fixed;
    width: 200px;
    height: 50%;
    overflow: hidden;

    left: 50%;
    transform: translateX(-50%);

    z-index: 1;
}

.sun {
    position: fixed;
    width: 200px;
    height: 200px;

    background-color: rgb(253, 253, 115);
    border-radius: 50%;
    margin-left: auto;
    margin-right: auto;

    top: -100px;
    transform: translateY(50vh);

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateSun;
}

@keyframes animateSun {
    0%, 50% {
        transform: translateY(250vh);
        background-color: rgb(255, 166, 0);
    }
    75% {
        transform: translateY(50vh);
        background-color: rgb(255, 166, 0);
    }
    80% {
        transform: translateY(20vh);
        background-color: rgb(255, 255, 255);
    }
    100% {
        transform: translateY(-100vh);
        background-color: rgb(255, 255, 255);
    }
}

.moon {
    position: fixed;
    width: 200px;
    height: 200px;

    background-color: rgb(212, 212, 212);
    border-radius: 50%;
    margin-left: auto;
    margin-right: auto;

    top: -100px;
    transform: translateY(50vh);

    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateMoon;
}

@keyframes animateMoon {
    0% {
        transform: translateY(200vh);
    }
    25% {
        transform: translateY(50vh)
    }
    75%, 100% {
        transform: translateY(-250vh);
    }
}

.mountainsContainer {
    position: fixed;
    width: 100%;
    height: 100%;

    z-index: 2;
    
    display: flex;
    flex-direction: row;
    align-items: center;

    justify-content: space-between;
}

.leftMountain {
    width: max(100px, 30vw);
    height: max(100px, 30vw);

    background-color: rgb(66, 66, 66);

    mask-image: url('/images/masks/mountainLeftMask.png');
    mask-size: max(100px, 30vw) max(100px, 30vw);
}

.leftMountainSnow {
    width: max(100px, 30vw);
    height: max(100px, 30vw);

    background:
    linear-gradient(.43turn,white 27% , transparent 33%),
    linear-gradient(.55turn, white 36%, transparent 42%);

    mask-image: url('/images/masks/mountainLeftMask.png');
    mask-size: max(100px, 30vw) max(100px, 30vw);
}

.rightMountain {
    width: max(100px, 30vw);
    height: max(100px, 30vw);

    background-color: rgb(66, 66, 66);

    mask-image: url('/images/masks/mountainRightMask.png');
    mask-size: max(100px, 30vw) max(100px, 30vw);
}

.rightMountainSnow {
    width: max(100px, 30vw);
    height: max(100px, 30vw);

    background:
    linear-gradient(.46turn,white 37% , transparent 43%),
    linear-gradient(.53turn, white 29%, transparent 34%);

    mask-image: url('/images/masks/mountainRightMask.png');
    mask-size: max(100px, 30vw) max(100px, 30vw);
}

.maximizeButtonContainer {
    position: fixed;
    width: 80px;
    height: 40px;

    opacity: 0;

    pointer-events: none;
    cursor: pointer;

    bottom: 20px;
    left: 50%;
    transform: translate(-50%, -20%);

    transition: all .8s linear;
}

.lilypad {
    border-radius: 50%;
    mask-image: conic-gradient(black 40%, transparent 40%, transparent 60%, black 60%);
    background: radial-gradient(rgb(60, 141, 60) 0%, rgb(83, 196, 83) 50%, rgb(112, 248, 112));
    height: 100%;
    width: 100%;
}

.lotusPetal {
    position: fixed;
    mask-image: url('/images/masks/lotusPetalMask.png');
    mask-size: 50px 15px;

    height: 15px;
    width: 50px;

    transform-origin: 100% 50%;
    
    left: 50%;

    bottom: 20px;

    transition: transform .8s linear;
}

.lotusPetalMiddle {
    background-color: yellow;
    transform: translate(-100%, 5px) rotate(90deg);
}

.lotusPetalRight1 {
    background: linear-gradient(rgb(197, 87, 105), rgb(255, 182, 194) 80%);
    transform: translate(-105%, 5px) rotate(100deg);
}

.lotusPetalRight2 {
    background: linear-gradient(rgb(201, 101, 117), rgb(255, 146, 164) 70%);
    transform: translate(-105%, 5px) rotate(110deg);
}

.lotusPetalRight3 {
    background: linear-gradient(rgb(204, 83, 103), rgb(255, 123, 145) 60%);
    transform: translate(-105%, 5px) rotate(120deg);
}

.lotusPetalLeft1 {
    background: linear-gradient(to top, rgb(197, 87, 105), rgb(255, 182, 194) 80%);
    transform: translate(-95%, 5px) rotate(80deg);
}

.lotusPetalLeft2 {
    background: linear-gradient(to top, rgb(201, 101, 117), rgb(255, 146, 164) 70%);
    transform: translate(-95%, 5px) rotate(70deg);
}

.lotusPetalLeft3 {
    background: linear-gradient(to top, rgb(204, 83, 103), rgb(255, 123, 145) 60%);
    transform: translate(-95%, 5px) rotate(60deg);
}

